@@ -1,6 +1,7 @@
 1.3 beta 6
 - Further improve magnetic grid
 - Add "Duplicate track" feature
+- Show a dialog asking user to restart Aria after changing soundfont
 
 1.3 beta 5
 - Added support for selecting sound bank on OSX
